--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-fast-accordion": "^2.0.10",
     "react-icons": "^4.4.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-responsive": "^9.0.0-beta.10",
     "react-responsive-carousel": "^3.2.23",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
