--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-slick": "^0.29.0",
     "react-spinner": "^0.2.7",
     "react-spinners": "^0.13.4",
+    "react-swipeable-views": "^0.14.0",
     "styled-components": "^5.3.5",
     "swiper": "^8.3.2",
     "web-vitals": "^2.1.4"
